kubernetes/dev/05-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: khoj-app
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: khoj-app
  template:
    metadata:
      labels:
        app: khoj-app
    spec:
      containers:
        - name: khoj-app
          image: 797748030688.dkr.ecr.ap-south-1.amazonaws.com/khoj-app:latest
          ports:
            - containerPort: 8080
