kubernetes/dev/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: khoj-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: khoj-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
